--- a/Masterarbeit 4/OmniGraffle/LebenszyklusOpenup.graffle/data.plist
+++ b/Masterarbeit 4/OmniGraffle/LebenszyklusOpenup.graffle/data.plist
@@ -46,7 +46,7 @@
 	<key>Creator</key>
 	<string>Bianka Hampp</string>
 	<key>DisplayScale</key>
-	<string>1 0/72 in = 1 0/72 in</string>
+	<string>1 0/72 in = 1.0000 in</string>
 	<key>GraphDocumentVersion</key>
 	<integer>8</integer>
 	<key>GraphicsList</key>
@@ -208,8 +208,8 @@
 					<integer>96</integer>
 					<key>Points</key>
 					<array>
-						<string>{323.34807869785567, 412.44500732421875}</string>
-						<string>{340.12683687940381, 387.19500732421875}</string>
+						<string>{323.32173647295645, 412.44500732421875}</string>
+						<string>{340.03714787558039, 387.19500732421875}</string>
 					</array>
 					<key>Style</key>
 					<dict>
@@ -242,7 +242,8 @@
 					<key>Points</key>
 					<array>
 						<string>{226.99383544921875, 339.69500732421869}</string>
-						<string>{305.87077331542969, 413.16479980235795}</string>
+						<string>{248, 359}</string>
+						<string>{305.87077331542969, 413.12469164917616}</string>
 					</array>
 					<key>Style</key>
 					<dict>
@@ -269,8 +270,8 @@
 					<integer>98</integer>
 					<key>Points</key>
 					<array>
-						<string>{193.84058751435853, 402.44500732421875}</string>
-						<string>{212.33650309647373, 377.69500732421875}</string>
+						<string>{193.4972163147695, 402.44500732421875}</string>
+						<string>{209.75454152346285, 379.69500732421875}</string>
 					</array>
 					<key>Style</key>
 					<dict>
@@ -328,7 +329,7 @@
 \deftab720
 \pard\pardeftab720
 
-\f0\fs24 \cf0 Einsatzf\'e4higkeit-Meilenstein}</string>
+\f0\fs24 \cf0 Einsatzf\'e4higkeit-meilenstein}</string>
 					</dict>
 				</dict>
 				<dict>
@@ -369,7 +370,7 @@
 \deftab720
 \pard\pardeftab720
 
-\f0\fs24 \cf0 Produkt-Release-Meilenstein}</string>
+\f0\fs24 \cf0 Produkt-Release-meilenstein}</string>
 					</dict>
 				</dict>
 				<dict>
@@ -410,12 +411,12 @@
 \deftab720
 \pard\pardeftab720
 
-\f0\fs24 \cf0 Architektur-Meilenstein}</string>
+\f0\fs24 \cf0 Architektur-meilenstein}</string>
 					</dict>
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{186.73820495605469, 352.19500732421875}, {70, 25.5}}</string>
+					<string>{{183.73820495605469, 354.19500732421875}, {70, 25.5}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
@@ -451,7 +452,7 @@
 \deftab720
 \pard\pardeftab720
 
-\f0\fs24 \cf0 Zielsetzung-Meilenstein}</string>
+\f0\fs24 \cf0 Zielsetzung-meilenstein}</string>
 					</dict>
 				</dict>
 				<dict>
@@ -858,8 +859,8 @@
 					<integer>115</integer>
 					<key>Points</key>
 					<array>
-						<string>{127.42562536527252, 356.57291939352348}</string>
-						<string>{175.49383544921875, 402.83552492315039}</string>
+						<string>{127.42539330598642, 356.57316034418409}</string>
+						<string>{175.49383544921875, 402.83880520788574}</string>
 					</array>
 					<key>Style</key>
 					<dict>
@@ -1143,8 +1144,6 @@
 						<key>VerticalPad</key>
 						<integer>0</integer>
 					</dict>
-					<key>TextRelativeArea</key>
-					<string>{{0.10000000000000001, 0.14999999999999999}, {0.80000000000000004, 0.69999999999999996}}</string>
 				</dict>
 				<dict>
 					<key>Bounds</key>
@@ -1341,7 +1340,7 @@
 	<key>MasterSheets</key>
 	<array/>
 	<key>ModificationDate</key>
-	<string>2014-04-19 15:53:02 +0000</string>
+	<string>2014-12-13 16:55:29 +0000</string>
 	<key>Modifier</key>
 	<string>Bianka Hampp</string>
 	<key>NotesVisible</key>
